# AndGlideTalk

./: READEME2.md  README.md  settings.gradle
BigLongImage/: build.gradle
BigLongImage/src/androidTest/java/com/jesen/biglongimage/: ExampleInstrumentedTest.java
BigLongImage/src/main/: AndroidManifest.xml
BigLongImage/src/main/java/com/jesen/biglongimage/: MainActivity.java
BigLongImage/src/main/res/layout/: activity_main.xml
BigLongImage/src/main/res/values/: strings.xml
BigLongImage/src/test/java/com/jesen/biglongimage/: ExampleUnitTest.java
CustomGlide/: build.gradle
CustomGlide/src/main/: AndroidManifest.xml
CustomGlide/src/main/res/layout/: activity_main.xml
CustomGlide/src/main/res/xml/: file_paths.xml
MemoryReusePool/: build.gradle
MemoryReusePool/src/main/: AndroidManifest.xml
MemoryReusePool/src/main/res/layout/: activity_main.xml
MemoryReusePool/src/main/res/values/: strings.xml
Test_giflib/: build.gradle
Test_giflib/src/main/: AndroidManifest.xml
Test_giflib/src/main/res/values/: strings.xml  themes.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_third.xml
app/src/main/res/values/: strings.xml
bitmaptest/: build.gradle
bitmaptest/src/main/: AndroidManifest.xml
bitmaptest/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
native_gif_lib/: build.gradle
native_gif_lib/src/main/: AndroidManifest.xml
native_gif_lib/src/main/cpp/: CMakeLists.txt  native_gif_lib.cpp
(+50 files in other folders)
